Using new version of dataset_manager

--- a/datasets/censo_rj_familias_2000.yaml
+++ b/datasets/censo_rj_familias_2000.yaml
@@ -1,4 +1,5 @@
 description: censo 2000 familias
-format: zip xls
+format: xls
+compression: zip
 local_source: ./data/censo_2000
 source: ftp://ftp.ibge.gov.br/Censos/Censo_Demografico_2000/familias/Municipios/rj.zip
