--- a/datasets/censo_rj_familias_2010.yaml
+++ b/datasets/censo_rj_familias_2010.yaml
@@ -1,4 +1,5 @@
 description: censo 2010 familias
-format: zip xls
+format: xls
+compression: zip
 local_source: ./data/censo_2010
 source: ftp://ftp.ibge.gov.br/Censos/Censo_Demografico_2010/Familias_e_Domicilios/xls/Municipios/rio_de_janeiro_xls.zip
