--- a/datasets/media_alunos_2009.yaml
+++ b/datasets/media_alunos_2009.yaml
@@ -1,4 +1,5 @@
 source: http://download.inep.gov.br/informacoes_estatisticas/2011/indicadores_educacionais/media_alunos_turma/2009/media_alunos_turma_municipios_2009.zip
 description: Média de alunos por turmas em escolas e creches em 2009.
-format: zip xls
+format: xls
+compression: zip
 local_source: ./data/media_alunos_2009
